# Goedelnumber

./: BigUnsignInt.cpp  BigUnsignInt.h  CMakeLists.txt  GoedelGenerator.cpp  GoedelGenerator.h  Goedelnumber.cpp  HelpPage.cpp  HelpPage.h  PrimeRepository.cpp  PrimeRepository.h  Primes.cpp  Primes.h  SieveOfEratosthenes.cpp  SieveOfEratosthenes.h  connector.h  test.txt
